test: Unit tests fixed
Signed-off-by: Marek Forys <mforys73@gmail.com>