@@ -20,10 +20,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.mockito:mockito-core:5.2.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
 }
 
 test {
     useJUnitPlatform()
     testLogging.showStandardStreams = true
+    jvmArgs '-Dnet.bytebuddy.experimental=true'
 }
